cmake_minimum_required (VERSION 3.4)

project(tbb_tutorials LANGUAGES CXX)

if (WIN32)
  set(CMAKE_CXX_COMPILER "icx-cl")
  set(CMAKE_LINKER "icpx")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Qtbb")
  set(CMAKE_CXX_LINKER_FLAGS "-Qtbb")
else()
  set(CMAKE_CXX_COMPILER "icpx")
  set(CMAKE_LINKER "icpx")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -tbb -pthread")
  set(CMAKE_CXX_LINKER_FLAGS "-tbb -lpthread") 
endif()
set(CMAKE_CXX_STANDARD 20)

include (CTest)

if (BUILD_TESTING)
  enable_testing()
  add_subdirectory(algorithms)
  add_subdirectory(cancellation)
  add_subdirectory(exception)
  add_subdirectory(containers)
  add_subdirectory(graph)
  add_subdirectory(intro)
  add_subdirectory(memalloc)
  add_subdirectory(migration)
  add_subdirectory(performance_tuning)
  add_subdirectory(synchronization)
  add_subdirectory(tasks)
endif (BUILD_TESTING)

